# Clover

./: .env  Justfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  todo.list
app-cli/: pyproject.toml
app-cli/app/: main.py
app-ui/: main.js  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  todolist
backend/app/: apiclient.py  cache.py  config.py  database.py  inference.py  main.py  milvus.py  minio.py  minioclient.py  pgcache.py  test.py  uselater.py
backend/app/users/: crud.py  models.py  route.py  schemas.py  temp.py  utils.py
backend/extra/: exporter.py  main.py  pending  test  test.py
docker/: compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
frontend/: .gitignore  Dockerfile  README.md  components.json  docker-compose.yml  explore.redesign  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  todo.list  tsconfig.json
frontend/app/: global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  sitemap.ts
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/auth/: page.tsx
frontend/app/(routes)/: layout.tsx  page.tsx
frontend/app/(routes)/(cluster)/[username]/[title]/: page.tsx
frontend/app/(routes)/(element)/e/[id]/: page.tsx
frontend/app/(routes)/explore/: page.tsx
frontend/app/(routes)/profile/: page.tsx
frontend/app/(routes)/search/: page.tsx
frontend/app/(routes)/visual-search/[id]/: page.tsx
frontend/components/: auth-form.tsx  cluster.tsx  context.tsx  dialogs.tsx  explore.tsx  header.tsx  image-view.tsx  masonry-layout.tsx  profile.tsx  session.tsx  visual-search.tsx
frontend/components/decrapetated/: Auth.txt  Gallery.txt  Tags.txt  gradient bg
frontend/lib/: actions.ts  api.ts
frontend/styles/: Masonry.css  globals.css
ml-server/: .gitignore  Dockerfile  config.yml  pyproject.toml
ml-server/app/: main.py  utils.py
prometheus/: prometheus.yml
