[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Praveen <praveenkumar.e2022@vitstudent.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"
requests = "^2.32.3"
docker = "^7.1.0"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
