[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Praveen <praveenkumar.e2022@vitstudent.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
pydantic = "^2.10.4"
psycopg2-binary = "^2.9.10"
minio = "^7.2.13"
bcrypt = "^4.2.1"
blurhash-python = "^1.2.2"
psutil = "^6.1.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
imagehash = "^4.3.1"
transformers = "^4.47.1"
python-multipart = "^0.0.20"
python-magic = "^0.4.27"
pymilvus = "2.5.3"
torch = "^2.5.1"
pytorch-lightning = "^2.5.0.post0"
torchvision = "^0.20.1"
onnxruntime = "^1.20.1"
onnx = "^1.17.0"
onnxsim = "^0.4.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
