[project]
name = "ml-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Praveen Kumar",email = "praveenkumar.e2022@vitstudent.ac.in"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "onnxruntime (>=1.20.1,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "huggingface-hub (>=0.27.1,<0.28.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
